tests/error/type_errors/call_wrong_arg.err
Error: Type mismatch (at $FILE:6:15)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return foo(True)
  |                ^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
